--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,27 @@
 appnope==0.1.0
 backcall==0.1.0
-blinker==1.4
-Click==7.0
+blinker==1.7.0
+click==8.1.7
 decorator==4.3.0
-Flask==1.0.2
-Flask-DebugToolbar==0.10.1
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.2
-ipython==7.18.1
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.1
 ipython-genutils==0.2.0
-itsdangerous==0.24
-jedi==0.13.1
-Jinja2==2.10
-MarkupSafe==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 parso==0.3.1
-pexpect==4.6.0
 pickleshare==0.7.5
-prompt-toolkit==2.0.5
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.9
 ptyprocess==0.6.0
+pycparser==2.21
 Pygments==2.2.0
 simplegeneric==0.8.1
 six==1.11.0
-SQLAlchemy==1.3.20
+SQLAlchemy==2.0.23
 traitlets==4.3.2
+typing_extensions==4.8.0
 wcwidth==0.1.7
-Werkzeug==0.16.0
+Werkzeug==3.0.1
 WTForms==2.2.1
-cffi==1.14.3
